--- a/style.css
+++ b/style.css
@@ -50,21 +50,36 @@ h3 {
 .container {
     width: 1270px;
     text-align: center;
+    justify-content: center;
 }
+
+
+.texto{
+    text-align: center;
+}
+
+
 .grid-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 1px; /* Espaço entre as fotos */
-    justify-items: center; /* Centraliza os itens */
-    align-items: center; /* Centraliza os itens */
+    gap: 1px;
+    text-align: center;
+    justify-items: center;
+
 }
+
+
 .grid-container img {
     max-width: 77%;
     height: auto;
+    justify-items
 }
 
+
+
+
 .grid-container img:hover {
-    transform: scale(1.1); /* Aumenta a imagem em 10% */
+    transform: scale(1.1); 
 }
 
 
@@ -75,5 +90,5 @@ footer {
     background-color: #6ef0ba;
     text-align: center;
     padding: 10px;
-    margin-top: auto; /* Empurra o footer para baixo */
+    margin-top: auto;
 }
